examples/failing/OverlappingBinders2.purs
module Main where

data Foo x = Foo x 

test x@(Foo x) = x